# automated-content-creator

./: .gitignore  .mcp.json  CLAUDE.md  README.md  ROADMAP.md  app-review-notes.md  content_intake_log.xlsx  media-pipeline.md  reel_ideas.md  run_tests.sh  video-editor-plan.md
editor/: .env.example  app.py  audio_beats.py  build_macos_app.sh  catalog.py  claude_client.py  composio_wrapper.py  config.py  conftest.py  core.py  db.py  desktop.py  drive_import.py  export.py  face_lib.py  indexing.py  ingest.py  jobs_runtime.py  mcp_server.py  media_files.py  migrate_xlsx.py  motion_lib.py  music_lib.py  photos_import.py  pyproject.toml  requirements.txt  scripts_hygiene.py  semantic.py  settings.py  tts.py  vision_lib.py
editor/blueprints/: ai.py  campaigns.py  clips.py  edits.py  jobs.py  media.py  pages.py  publishing.py
editor/data/: editor.db
editor/migrations/: 001_baseline.sql  002_region_time.sql  003_crop_source.sql  004_social_core.sql  005_audio_design.sql  006_ref_audio.sql
editor/social/: __init__.py  analytics.py  base.py  instagram.py  scheduler.py
editor/static/: app.js  campaigns.css  campaigns.js  chat.js  common.js  crop.js  cuts.js  faces.js  library.css  library.js  map.js  motion.js  projects.css  projects.js  studio.css  studio.js  style.css  things.js  toast.js  workspace.css  workspace.js
editor/templates/: _campaigns_panel.html  _editor_panel.html  _library_panel.html  campaigns.html  index.html  library.html  projects.html  studio.html  workspace.html
editor/tests/: test_adapters.py  test_analytics.py  test_audio.py  test_chat.py  (+13 more)
(+16 files in other folders)
